# project-genji

./: .gitignore  .test-only-placeholder  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  setup.sh  smoketest.md  subagent_workflow.md
.claude/: settings.json
.claude/agents/: implementer.md  integrator.md  planner.md  skeletoner.md
.claude/hooks/: branch-policy.py  check_tokens.py  codex-review-hook.py  context_pack.py  finalize.sh  guard-direct-write.py  notify.sh  post_patch_pipeline.py  pre-compact.py  prompt-guard.py  session-end.py  session-start.py  subagent-stop.py  validate-bash.py  validate-mcp-write.py
.github/workflows/: ci.yml
codex_reviews/: 20251013T220633Z_SMK-001-001.txt  20251013T224039Z_SMK-001-001.txt  20251017T020356Z_P3C4-001-008.txt  20251019T162142Z_P3C4-001-009.txt
configs/: backtest_cn.yaml  backtest_us.yaml  data_cn.yaml  data_us.yaml  model2_cn.yaml  model2_us.yaml  optimizer.yaml
contracts/: CVScores.schema.json  EyeClosureOutput.schema.json  FeatureImportance.schema.json  OOFPredictions.schema.json
docs/: project_specs.md  specs.md  theory.md
docs/archive/: sprint1phase2.md
docs/bookkeeping/: phase3breakdown.md
docs/planning/: DEPENDENCY_GRAPH.txt  SUMMARY.md  spec.md
orchestrator/: budgets.yaml
patches/: P3C4-001-004.json  P3C4-001-005.json  P3C4-001-008-fix-caplog.json  P3C4-001-008.json  P3C4_001_009.json  P3C4_001_009_fix.json  P3C4_001_009_stubs.json  P3C4_001_009_test_fix.json  SMK-001-001.json  model_registry_stubs.json  p3c4-001-011.json  p3c4_001_010_cv_score_logging.json  p3c4_001_010_test_fixes.json  smoketest_stubs.json  test_model2_base_models_stubs.json
scripts/: archive_work_items.py  reset_workspace.sh
src/data/: build_qlib_dataset.py  build_universe.py  dump_bin.py  ingest_ts_cn.py  ingest_yf_us.py
src/model2/: __init__.py  base_models.py  features.py  labels.py  model_registry.py  persistence.py  train.py
src/utils/: logging.py
summary/: ledger.jsonl
tests/integration/: test_smoketest_validation.sh
tests/unit/: test_model2_base_models.py  test_model2_base_trainers.py  test_model2_cv_orchestration.py  test_model2_cv_scores.py  test_model2_features.py  test_model2_labels.py  test_model2_model_registry.py  test_model2_multi_horizon.py  test_model2_oof_aggregation.py  test_model2_persistence.py  test_post_patch_pipeline.py
tickets/: work_items.json
tickets/archive/: work-items.jsonl
